--- a/project-1.html
+++ b/project-1.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Number 1</title>
+    <link rel="stylesheet" href="./styles/project-1.css">
 </head>
 <body>
     <main>
-
+        <div class="container">
+            <h3 id="counter"> 0 </h3>
+            <button id="plusBtn"> + </button>
+            <button id="minusBtn"> - </button>
+        </div>
     </main>
 
 
